<resources>
    <string name="app_name">Event Planner</string>
    <string name="loading">Loading</string>

    <!--SplashActivity Screen-->

    <string name="calendarapp">Event Planner</string>

    <!--HomeActivity Screen-->

    <string name="noEventToday">No Event for Today</string>
    <string name="chooseFilter">Choose Filter</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>


    <!--LoginActivity Screen-->

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="enterPwd">Enter password!</string>
    <string name="enterEmail">Enter email address!</string>

    <!--SignUpActivity Screen-->

    <string name="action_sign_in_short">Register</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>

    <!--ScheduleEventActivity Screen-->

    <string name="addEvent">Add Event</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="addAgenda">Add Agenda</string>
    <string name="add">Add Event</string>
    <string name="eventplanningapp">Event Planning Application</string>

    <string-array name="filterItemArray">
        <item>Day View</item>
        <item>Week View</item>
        <item>Month View</item>
    </string-array>

</resources>
