...
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp">

                <EditText
                    android:id="@+id/edtxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColorHint="@color/edtxtHintColor"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
...
                android:layout_marginStart="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:hint="@string/hint_password">

                <EditText
                    android:id="@+id/edtxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColorHint="@color/edtxtHintColor"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
...
